raider and twix

--- a/.browse/.browse/folder/page.htm
+++ b/.browse/.browse/folder/page.htm
@@ -15,24 +15,24 @@
   <img id="cast" src=""></img>
   <div id="interface">
     <table id="layout">
-        <thead> </thead>
-        <tbody>
-        <tr>
-            <td id="cell001" class="top left"> </td>
-            <td id="cell002" class="top center"> </td>
-            <td id="cell004" class="top right"> </td>
-            </tr>
-        <tr>
-            <td id="cell008" class="mid left"> </td>
-            <td id="cell016" class="mid center"> </td>         
-            <td id="cell032" class="mid right"> </td>
-            </tr>
-        <tr >
-            <td id="cell064" class="toe left"> </td>
-            <td id="cell128" class="toe center"> </td>
-            <td id="cell256" class="toe right" style="width:400px"> </td>
-            </tr>
-        </tbody>
+      <thead> </thead>
+      <tbody>
+      <tr>
+        <td id="cell001" class="top left"> </td>
+        <td id="cell002" class="top center"> </td>
+        <td id="cell004" class="top right"> </td>
+        </tr>
+      <tr>
+        <td id="cell008" class="mid left"> </td>
+        <td id="cell016" class="mid center"> </td>         
+        <td id="cell032" class="mid right"> </td>
+        </tr>
+      <tr>
+        <td id="cell064" class="toe left"> </td>
+        <td id="cell128" class="toe center"> </td>
+        <td id="cell256" class="toe right"> </td>
+        </tr>
+      </tbody>
     </table>
   </div>
   <iframe id="bypass" name="bypass" style="display:none" src=""> </iframe>
