--- a/.browse/.browse/root/page.htm
+++ b/.browse/.browse/root/page.htm
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html id="background">
 <head>
-    <title> </title>
-    <meta charset="utf-8"> </meta>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> </meta>
-    <meta http-equiv="cache-control" content="no-cache"> </meta>
-    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT"> </meta>
-    <meta http-equiv="pragma" content="no-cache"> </meta>
-    <style> </style>
-    <script> </script>
+  <title> </title>
+  <meta charset="utf-8"> </meta>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> </meta>
+  <meta http-equiv="cache-control" content="no-cache"> </meta>
+  <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT"> </meta>
+  <meta http-equiv="pragma" content="no-cache"> </meta>
+  <style> </style>
+  <script> </script>
 </head>
 <body>
   <div id="interface">
     <table id="layout">
-        <thead> </thead>
-        <tbody>
-        <tr>
-            <td id="cell001" class="top left" > </td>
-            <td id="cell002" class="top center"> </td>
-            <td id="cell004" class="top right" > </td>
-            </tr>
-        <tr>
-            <td id="cell008" class="mid left"> </td>
-            <td id="cell016" class="mid center"><div id="content"> </div><div id="scroll_cover" style="position:absolute;right:0;top:-4px;height:95%;width:24px;z-index:1;margin-right:-6px;background:#8596A5"> </div></td>         
-            <td id="cell032" class="mid right"> </td>
-            </tr>
-        <tr >
-            <td id="cell064" class="toe left"  > </td>
-            <td id="cell128" class="toe center"><h2 id="title_display"> </h2><br/></td>
-            <td id="cell256" class="toe right" > </td>
-            </tr>
-        </tbody>
+      <thead> </thead>
+      <tbody>
+      <tr>
+        <td id="cell001" class="top left" > </td>
+        <td id="cell002" class="top center"> </td>
+        <td id="cell004" class="top right" > </td>
+        </tr>
+      <tr>
+        <td id="cell008" class="mid left"> </td>
+        <td id="cell016" class="mid center"><div id="content"> </div><div id="hide_scrollbar"> </div></td>         
+        <td id="cell032" class="mid right"> </td>
+        </tr>
+      <tr >
+        <td id="cell064" class="toe left"  > </td>
+        <td id="cell128" class="toe center"> </td>
+        <td id="cell256" class="toe right" > </td>
+        </tr>
+      </tbody>
     </table>
   </div>
   <iframe id="bypass" name="bypass" style="display:none" src=""> </iframe>
-  <div id="foreground_top" style="z-index:1;background:url('.browse/images/foreground_top.png') repeat-x;width:100%;height:53px;position:fixed;top:0;left:0"> </div>
-  <div id="foreground_toe" style="z-index:1;background:url('.browse/images/foreground_toe.png') repeat-x;width:100%;height:53px;position:fixed;bottom:0;left:0"> </div>
-  <a href="?0=.browse"><img id="setup_switch" src=".browse/images/setup-button.png"/></a>
 </body>
 </html>
