--- a/.browse/.browse/setup/page.htm
+++ b/.browse/.browse/setup/page.htm
@@ -30,7 +30,7 @@
         <tr >
             <td id="cell064" class="toe left"> </td>
             <td id="cell128" class="toe center"> </td>
-            <td id="cell256" class="toe right" style="width:400px"> </td>
+            <td id="cell256" class="toe right"> </td>
             </tr>
         </tbody>
     </table>
